--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ rand = "0.8.5"
 bevy = { version = "0.15.0-rc.3", features = ["wayland"] }
 bevy_dev_tools = { version = "0.15.0-rc.3" }
 bevy_dylib = { version = "0.15.0-rc.3" }
+bevy_spatial = { git="https://github.com/paul-hansen/bevy-spatial.git", rev="68cfc7d" }
+color-backtrace = "0.6.1"
+glam = { version = "0.29.2", features = ["glam-assert"] }
