--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,10 @@ name = "space-battle"
 version = "0.1.0"
 edition = "2021"
 
-[features]
-default = ["dev_mode"]
-dev_mode = ["bevy/bevy_dev_tools"]
-
 [dependencies]
 rand = "0.8.5"
 bevy = { version = "0.15.0-rc.3", features = ["wayland"] }
-bevy_dev_tools = { version = "0.15.0-rc.3" }
-bevy_dylib = { version = "0.15.0-rc.3" }
 bevy_spatial = { git = "https://github.com/paul-hansen/bevy-spatial.git", rev = "68cfc7d" }
+bevy_embedded_assets = "0.12.0-rc.1"
 color-backtrace = "0.6.1"
 glam = { version = "0.29.2", features = ["glam-assert"] }
